// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI search index creation and data loading Search by area should have correct index name and number of fields 1`] = `
[
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": true,
    "name": "areaKey",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaCode",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaType",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaName",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "postcode",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
]
`;

exports[`AI search index creation and data loading Search by indicator should have correct index name and number of fields 1`] = `
[
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": true,
    "name": "indicatorID",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "indicatorName",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [
      "indicator-search-synonym-map",
    ],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "indicatorDefinition",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [
      "indicator-search-synonym-map",
    ],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "earliestDataPeriod",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "latestDataPeriod",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "dataSource",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "lastUpdatedDate",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.DateTimeOffset",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "associatedAreaCodes",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Collection(Edm.String)",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "fields": [
      {
        "analyzer": null,
        "dimensions": null,
        "facetable": false,
        "filterable": false,
        "indexAnalyzer": null,
        "key": false,
        "name": "trend",
        "retrievable": true,
        "searchAnalyzer": null,
        "searchable": false,
        "sortable": false,
        "stored": true,
        "synonymMaps": [],
        "type": "Edm.String",
        "vectorEncoding": null,
        "vectorSearchProfile": null,
      },
      {
        "analyzer": null,
        "dimensions": null,
        "facetable": false,
        "filterable": false,
        "indexAnalyzer": null,
        "key": false,
        "name": "areaCode",
        "retrievable": true,
        "searchAnalyzer": null,
        "searchable": false,
        "sortable": false,
        "stored": true,
        "synonymMaps": [],
        "type": "Edm.String",
        "vectorEncoding": null,
        "vectorSearchProfile": null,
      },
    ],
    "name": "trendsByArea",
    "type": "Collection(Edm.ComplexType)",
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "hasInequalities",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.Boolean",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": false,
    "indexAnalyzer": null,
    "key": false,
    "name": "unitLabel",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": false,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
]
`;

exports[`AI search index creation and data loading Search by indicator should have correct scoring profile configuration 1`] = `
[
  {
    "functionAggregation": null,
    "functions": [],
    "name": "basicScoringProfile",
    "text": {
      "weights": {
        "indicatorDefinition": 5,
        "indicatorID": 20,
        "indicatorName": 10,
      },
    },
  },
]
`;

exports[`AI search index creation and data loading Search by indicator synonym map should create synonym map 1`] = `
"a&e, accident, emergency
depr => deprivation
poverty, deprivation
copd => chronic, obstructive, pulmonary, disorder
hib => haemophilus, influenza
flu, influenza
menc => meningitis
menb => meningitis
dtap => diphtheria, tetanus, whooping, cough, pertussis
mmr => measles, mumps, rubella
ppv => pneumococcal
cardiovascular, ncvd
obesity, overweight, obese, excess, weight
antidepressant, depression
depressive, depression
mh => mental, health
bp => blood, pressure, hypertension
asthma, respiratory
tb => tuberculosis
cigarettes, tobacco
smoker, smokers, smoke, smoking
drink, alcohol
drinking, alcohol, drink
drunk, alcohol, drink
drinker, drink, alcohol
autism, autistic
msk => musculoskeletal
offspring, baby, infant, child
child, children
childhood, child
families, family
diabetes, diabetic
cvd => cardiovascular disease
af => atrial fibrillation
pci => percutaneous, coronary, intervention
chd => coronary, heart, disease
immunisations, vaccination, vaccine
immunisation, vaccination, vaccine
vaccinations, immunisation, vaccine
eyfsp => early, years, foundation, stage, profile
sdq => strengths, difficulties, questionnaire
la => local authority
hba1c => haemoglobin
iapt => psychological, therapies, mental, health
ckd => chronic, kidney, disease
rrt => renal, replacement, therapy, kidney
renal, kidney
dialysis, kidney
larc => long, acting, reversible, contraception
cyclist, cycling
bme => black, minority, ethnic
dental, teeth, oral
dmft => dental, teeth, oral
unemployed, unemployment
injury, injuries
coli, ecoli
sti => sexually, transmitted, infection
antibiotics, antibiotic
pollution, quality
disabilities, disability, disabled
disability, disabled
violence, abuse, violent
violent, violence
breastfeeding, breast, feeding, breastfed, breastmilk
breastmilk, breastfeeding, breastfed
meal, meals
suicide, self, harm, deliberate, injury
hiv, aids"
`;
